--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "@astrojs/sitemap": "^3.4.0",
     "astro": "^5.8.0"
+  },
+  "devDependencies": {
+    "vite-plugin-readable-classnames": "^1.5.2"
   }
 }
