--- a/.github/workflows/mirror_codeberg.yml
+++ b/.github/workflows/mirror_codeberg.yml
@@ -3,7 +3,7 @@ name: Mirror to Codeberg
 on:
   push:
     branches:
-      - main
+      - '**'
   workflow_dispatch:
 
 jobs:
@@ -12,12 +12,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # нужно для --mirror
-          persist-credentials: false # чтобы не использовать токен github
-      - name: Push mirror to Codeberg
-        env:
-          CODEBERG_URL: ${{ secrets.CODEBERG_MIRROR_URL }}
+          fetch-depth: 0
+          persist-credentials: false
+      - name: Fetch all branches and tags
         run: |
-          git remote add codeberg "$CODEBERG_URL"
-          git push --mirror --force codeberg
-          
+          git fetch --all --prune
+      - name: Mirror to Codeberg
+        env:
+          MIRROR_URL: ${{ secrets.CODEBERG_MIRROR_URL }}
+        run: |
+          git remote add codeberg "$MIRROR_URL"
+          git push --mirror codeberg
